skapar grundkod html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
 <!doctype html>
 <html lang="sv">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/css/styles.css">
-    <title>laboration1.json</title>
-  </head>
-  <body>
 
-    <script type="module" src="/src/js/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/src/css/styles.css">
+  <title>DT211G - Laboration 1</title>
+</head>
+
+<body>
+  <header>
+    <h1>DT211G - Laboration 1</h1>
+    <nav>
+      <ul>
+        <li><a href="/">Startsida</a></li>
+        <li><a href="/pictures">Bilder</a></li>
+        <li><a href="/process">Arbetsprocess</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h2>Startsida</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nihil expedita veritatis fugit nam corrupti
+      ducimus aspernatur voluptatem velit earum sapiente aperiam ab odit possimus saepe enim sunt, dolor deserunt?</p>
+    <p>Necessitatibus officia quaerat eaque cupiditate id? Minus doloribus neque, laudantium repellendus hic a
+      perspiciatis ex vero atque consequatur. Sunt et a deleniti id voluptatibus architecto cumque doloremque. Nisi, est
+      placeat.</p>
+    <p>Corporis molestias repudiandae tenetur velit facilis sint laudantium necessitatibus quae esse dignissimos.
+      Blanditiis quod eius repudiandae tempora perferendis, aspernatur voluptatibus dicta itaque, excepturi laboriosam,
+      quo eum! Reiciendis id aut esse.</p>
+  </main>
+  <footer>
+    <p>&copy; Hanna Lindkvist</p>
+  </footer>
+  <script type="module" src="/src/js/main.js"></script>
+</body>
+
 </html>
