--- a/index.html
+++ b/index.html
@@ -10,30 +10,34 @@
 </head>
 
 <body>
-  <header>
-    <h1>DT211G - Laboration 1</h1>
-    <nav>
-      <ul>
-        <li><a href="/">Startsida</a></li>
-        <li><a href="/pictures">Bilder</a></li>
-        <li><a href="/process">Arbetsprocess</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <h2>Startsida</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nihil expedita veritatis fugit nam corrupti
-      ducimus aspernatur voluptatem velit earum sapiente aperiam ab odit possimus saepe enim sunt, dolor deserunt?</p>
-    <p>Necessitatibus officia quaerat eaque cupiditate id? Minus doloribus neque, laudantium repellendus hic a
-      perspiciatis ex vero atque consequatur. Sunt et a deleniti id voluptatibus architecto cumque doloremque. Nisi, est
-      placeat.</p>
-    <p>Corporis molestias repudiandae tenetur velit facilis sint laudantium necessitatibus quae esse dignissimos.
-      Blanditiis quod eius repudiandae tempora perferendis, aspernatur voluptatibus dicta itaque, excepturi laboriosam,
-      quo eum! Reiciendis id aut esse.</p>
-  </main>
-  <footer>
-    <p>&copy; Hanna Lindkvist</p>
-  </footer>
+  <div class="container">
+    <header>
+      <h1>DT211G - Laboration 1</h1>
+      <nav>
+        <ul>
+          <li><a href="/">Startsida</a></li>
+          <li><a href="/pictures">Bilder</a></li>
+          <li><a href="/process">Arbetsprocess</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h2>Startsida</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nihil expedita veritatis fugit nam corrupti
+        ducimus aspernatur voluptatem velit earum sapiente aperiam ab odit possimus saepe enim sunt, dolor deserunt?</p>
+      <p>Necessitatibus officia quaerat eaque cupiditate id? Minus doloribus neque, laudantium repellendus hic a
+        perspiciatis ex vero atque consequatur. Sunt et a deleniti id voluptatibus architecto cumque doloremque. Nisi,
+        est
+        placeat.</p>
+      <p>Corporis molestias repudiandae tenetur velit facilis sint laudantium necessitatibus quae esse dignissimos.
+        Blanditiis quod eius repudiandae tempora perferendis, aspernatur voluptatibus dicta itaque, excepturi
+        laboriosam,
+        quo eum! Reiciendis id aut esse.</p>
+    </main>
+    <footer>
+      <p>&copy; Hanna Lindkvist</p>
+    </footer>
+  </div>
   <script type="module" src="/src/js/main.js"></script>
 </body>
 
