uppdaterar index.html med innehåll

--- a/index.html
+++ b/index.html
@@ -23,16 +23,22 @@
     </header>
     <main>
       <h2>Startsida</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nihil expedita veritatis fugit nam corrupti
-        ducimus aspernatur voluptatem velit earum sapiente aperiam ab odit possimus saepe enim sunt, dolor deserunt?</p>
-      <p>Necessitatibus officia quaerat eaque cupiditate id? Minus doloribus neque, laudantium repellendus hic a
-        perspiciatis ex vero atque consequatur. Sunt et a deleniti id voluptatibus architecto cumque doloremque. Nisi,
-        est
-        placeat.</p>
-      <p>Corporis molestias repudiandae tenetur velit facilis sint laudantium necessitatibus quae esse dignissimos.
-        Blanditiis quod eius repudiandae tempora perferendis, aspernatur voluptatibus dicta itaque, excepturi
-        laboriosam,
-        quo eum! Reiciendis id aut esse.</p>
+      <p>Denna webbplats är en laboration i kursen DT211G - Frontend-baserad webbutveckling i programmet Webbutveckling
+        hos Mittuniversitetet.</p>
+      <h3>Mål och syfte</h3>
+      <p>Laborationen ska ge inblick i hur NodeJs kan användas för att underlätta utveckling av webbplats. Lära sig
+        automatisera uppgifter med något kommandobaserat verktyg i NodeJs. Lära sig skapa en automatiserad
+        utvecklingsmiljö baserad på NodeJs och Git. Lära sig automatisera transpilering och minifiering av CSS, HTML och
+        JavaScript samt automatiskt skapa optimerade grafikfiler.</p>
+      <h3>Uppgift</h3>
+      <p>Uppgiften består av flera delar som framgår i listan nedan:</p>
+      <ul>
+        <li>Git och github ska användas för versionshantering,</li>
+        <li>NodeJs ska användas för att automatisera uppgifter i webbprojektet,</li>
+        <li>Fullt responsiv demowebbplats med tre undersidor skapas med HTML, CSS och JavaScript,</li>
+        <li>Webbplatsen ska publiceras till webbhost ocu automatiskt publiceras vid uppdatering av Github-repot,</li>
+        <li>Arbetsprocessen för utveckling och publicering ska beskrivas</li>
+      </ul>
     </main>
     <footer>
       <p>&copy; Hanna Lindkvist</p>
