--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>DT211G - Laboration 1</h1>
       <nav>
         <ul>
-          <li><a href="/">Startsida</a></li>
+          <li><a class="current-page" href="/">Startsida</a></li>
           <li><a href="/pictures">Bilder</a></li>
           <li><a href="/process">Arbetsprocess</a></li>
         </ul>
