--- a/pictures.html
+++ b/pictures.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul>
                     <li><a href="/">Startsida</a></li>
-                    <li><a href="/pictures">Bilder</a></li>
+                    <li><a class="current-page" href="/pictures">Bilder</a></li>
                     <li><a href="/process">Arbetsprocess</a></li>
                 </ul>
             </nav>
