--- a/process.html
+++ b/process.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="/">Startsida</a></li>
                     <li><a href="/pictures">Bilder</a></li>
-                    <li><a href="/process">Arbetsprocess</a></li>
+                    <li><a class="current-page" href="/process">Arbetsprocess</a></li>
                 </ul>
             </nav>
         </header>
