lägger till bilder

--- a/pictures.html
+++ b/pictures.html
@@ -21,21 +21,26 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <main class="image-grid">
             <h2>Bilder</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nihil expedita veritatis fugit nam
-                corrupti
-                ducimus aspernatur voluptatem velit earum sapiente aperiam ab odit possimus saepe enim sunt, dolor
-                deserunt?</p>
-            <p>Necessitatibus officia quaerat eaque cupiditate id? Minus doloribus neque, laudantium repellendus hic a
-                perspiciatis ex vero atque consequatur. Sunt et a deleniti id voluptatibus architecto cumque doloremque.
-                Nisi, est
-                placeat.</p>
-            <p>Corporis molestias repudiandae tenetur velit facilis sint laudantium necessitatibus quae esse
-                dignissimos.
-                Blanditiis quod eius repudiandae tempora perferendis, aspernatur voluptatibus dicta itaque, excepturi
-                laboriosam,
-                quo eum! Reiciendis id aut esse.</p>
+            <div class="imgOne">
+                <img src="public/images/bild1.webp" alt="">
+            </div>
+            <div class="imgTwo">
+                <img src="public/images/bild2.webp" alt="">
+            </div>
+            <div class="imgThree">
+                <img src="public/images/bild5.webp" alt="">
+            </div>
+            <div class="imgFour">
+                <img src="public/images/bild6.webp" alt="">
+            </div>
+            <div class="imgFive">
+                <img src="public/images/bild3.webp" alt="">
+            </div>
+            <div class="imgSix">
+                <img src="public/images/bild4.webp" alt="">
+            </div>
         </main>
         <footer>
             <p>&copy; Hanna Lindkvist</p>
