ändrar url för bilder

--- a/pictures.html
+++ b/pictures.html
@@ -24,22 +24,22 @@
         <main class="image-grid">
             <h2>Bilder</h2>
             <div class="imgOne">
-                <img src="public/images/bild1.webp" alt="">
+                <img src="/images/bild1.webp" alt="">
             </div>
             <div class="imgTwo">
-                <img src="public/images/bild2.webp" alt="">
+                <img src="/images/bild2.webp" alt="">
             </div>
             <div class="imgThree">
-                <img src="public/images/bild5.webp" alt="">
+                <img src="/images/bild5.webp" alt="">
             </div>
             <div class="imgFour">
-                <img src="public/images/bild6.webp" alt="">
+                <img src=/images/bild6.webp" alt="">
             </div>
             <div class="imgFive">
-                <img src="public/images/bild3.webp" alt="">
+                <img src="/images/bild3.webp" alt="">
             </div>
             <div class="imgSix">
-                <img src="public/images/bild4.webp" alt="">
+                <img src="/images/bild4.webp" alt="">
             </div>
         </main>
         <footer>
