ändrar fel i img url

--- a/pictures.html
+++ b/pictures.html
@@ -33,7 +33,7 @@
                 <img src="/images/bild5.webp" alt="">
             </div>
             <div class="imgFour">
-                <img src=/images/bild6.webp" alt="">
+                <img src="/images/bild6.webp" alt="">
             </div>
             <div class="imgFive">
                 <img src="/images/bild3.webp" alt="">
