--- a/process.html
+++ b/process.html
@@ -23,14 +23,15 @@
         </header>
         <main>
             <h2>Arbetsprocess</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nihil expedita veritatis fugit nam
-                corrupti
-                ducimus aspernatur voluptatem velit earum sapiente aperiam ab odit possimus saepe enim sunt, dolor
-                deserunt?</p>
-            <p>Necessitatibus officia quaerat eaque cupiditate id? Minus doloribus neque, laudantium repellendus hic a
-                perspiciatis ex vero atque consequatur. Sunt et a deleniti id voluptatibus architecto cumque doloremque.
-                Nisi, est
-                placeat.</p>
+            <p>Här beksrivs arbetsprocessen för utveckling och publicering av webbplatsen.</p>
+            <p>Webbprojektet finns tillgängligt i ett publikt repo på GitHub: https://github.com/Safe-Pizza/DT211G_Lab1_Vite.git</p>
+            <h3>Utveckling</h3>
+            <p>GitHub repot klonas till din lokala dator. NodeJS används för att automatisera uppgifter, paketen finns i en package.json som återställs via kommandot nmp install.
+                All utveckling och testning av webbplatsen sker i branchen dev. För skapa en demowebbplatsen under utveckligen använder du kommandot npm run dev, då får du en länk där du kan se webbplatsen lokalt i din webbläsare.
+                När du sedan vill testköra webbplatsen innan publicering använder du kommandot npm run build, då byggs webbplatsen och en katalog för distribution skapas (dist), och sedan npm run preview för att få en lokal länk till den färdiga webbplatsen.
+                Fungerar webbplatsen som tänk är du redo att gå vidare med publicering som beskrivs under rubriken Publicering. Om inte så raderar du dist-katalogen och fortsätter utveckligen i dev-branchen.
+            </p>
+            <h3>Publicering</h3>
             <p>Corporis molestias repudiandae tenetur velit facilis sint laudantium necessitatibus quae esse
                 dignissimos.
                 Blanditiis quod eius repudiandae tempora perferendis, aspernatur voluptatibus dicta itaque, excepturi
