--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
 <body>
   <div class="container">
     <header>
-      <h1>DT211G - Laboration 1</h1>
-      <nav>
+      <div class="topNav">
+        <a href="/">
+          <h1>DT211G - Laboration 1</h1>
+        </a>
+        <div id="hamburgerMenu">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
+      </div>
+      <nav class="mainNav">
         <ul>
           <li><a class="current-page" href="/">Startsida</a></li>
           <li><a href="/pictures">Bilder</a></li>
