lägger till alt-texter

--- a/pictures.html
+++ b/pictures.html
@@ -33,22 +33,22 @@
         <main class="image-grid">
             <h2>Bilder</h2>
             <div class="imgOne">
-                <img src="/images/bild1.webp" alt="">
+                <img src="/images/bild1.webp" alt="finkornig sandstrand med ensam solstol vid turkost hav och blå himmel">
             </div>
             <div class="imgTwo">
-                <img src="/images/bild2.webp" alt="">
+                <img src="/images/bild2.webp" alt="finkornig sandstrand vid turkost hav och blå himmel">
             </div>
             <div class="imgThree">
-                <img src="/images/bild5.webp" alt="">
+                <img src="/images/bild5.webp" alt="kuststad sedd från ovan med strand och berg vid kustlinjen och blått hav">
             </div>
             <div class="imgFour">
-                <img src="/images/bild6.webp" alt="">
+                <img src="/images/bild6.webp" alt="grunt kristallklart vatten med turkosa skiftningar och större stenar som bryter vattnet">
             </div>
             <div class="imgFive">
-                <img src="/images/bild3.webp" alt="">
+                <img src="/images/bild3.webp" alt="olivträd framför blått hav och himmel">
             </div>
             <div class="imgSix">
-                <img src="/images/bild4.webp" alt="">
+                <img src="/images/bild4.webp" alt="bergig kustlinje med turkost hav">
             </div>
         </main>
         <footer>
